# Thesis

./: gpt2transform.py  main.py  parser.py  pyproject.toml  quac.py  squad.py  svo.py  test.py  transferLearning.py  validator.py
output/: sample.txt
validation/: validation500.txt
