[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^2.3.2"
tensorflow = "^2.4.1"
fire = "^0.4.0"
regex = "^2020.11.13"
tqdm = "^4.56.0"
tensorboardx = "^2.1"
utils = "^1.0.1"
dataset = "^1.4.5"

[tool.poetry.dev-dependencies]

[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

